Uprava action baru

--- a/app/src/main/res/menu/memenu.xml
+++ b/app/src/main/res/menu/memenu.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:title="Switch to album view"
-        android:id="@+id/switchToAlbum" />
+        android:title="Switch view"
+        android:id="@+id/switchToAlbum"
+        android:icon="@drawable/ic_action_view_as_grid"
+        app:showAsAction="ifRoom"/>
 
 </menu>
