--- a/app/src/main/res/menu/memenu2.xml
+++ b/app/src/main/res/menu/memenu2.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:title="Switch to standard view"
-        android:id="@+id/switchToStandard" />
+        android:title="Switch view"
+        android:id="@+id/switchToStandard"
+        android:icon="@drawable/ic_action_view_as_list"
+        app:showAsAction="ifRoom"
+        />
 
 </menu>
