--- a/app/src/main/res/layout/activity_edit_story.xml
+++ b/app/src/main/res/layout/activity_edit_story.xml
@@ -1,58 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scrollView"
+    android:id="@+id/activity_edit_story_linear"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="sk.upjs.ics.android.phtstories.AlbumActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_edit_story"
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/my_toolbar_edit_story"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="sk.upjs.ics.android.phtstories.EditStoryActivity">
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/newStoryHeaderInputLayout"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/activity_edit_story"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Story title">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            tools:context="sk.upjs.ics.android.phtstories.EditStoryActivity">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/editStoryHeaderInputEditText"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/newStoryHeaderInputLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:hint="Story title">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/editStoryTaleInputLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Tell a tale">
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editStoryHeaderInputEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/editStoryTaleInputEditText"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/editStoryTaleInputLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:hint="Tell a tale">
 
-        <ImageView
-            android:id="@+id/editStoryPicImageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="Show a tale" />
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editStoryTaleInputEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:onClick="onFabClick" />
+            <ImageView
+                android:id="@+id/editStoryPicImageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="Show a tale" />
 
-    </LinearLayout>
-</ScrollView>
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:onClick="onFabClick" />
+
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
