--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:title="Share"
-        android:id="@+id/share" />
+        android:id="@+id/share"
+        android:icon="@drawable/ic_action_share"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:title="Edit"
-        android:id="@+id/edit" />
+        android:id="@+id/edit"
+        android:icon="@drawable/ic_action_edit"
+        app:showAsAction="ifRoom"/>
 
 </menu>
